<resources>
    <string name="app_name">Voicestorm</string>
    <string name="play_voice_note_description">Botón para reproducir la nota de voz</string>
    <string name="add_new_voice_note">Añadir nueva nota de voz</string>
    <string name="title_new_voicestorm">New VoiceStorm</string>
    <string name="hint_title">Título</string>
    <string name="transcript_placeholder">La transcripción aparecerá aquí...</string>
    <string name="btn_delete">Borrar</string>
    <string name="btn_save">Guardar</string>
    <string name="cd_record">Grabar</string>
    <string name="cd_pause">Pausar</string>
    <string name="cd_stop">Detener</string>
    <string name="transcribe_audio">Transcribir Audio</string>
    <string name="record_audio">Record</string>
    <string name="play_audio">Play</string>
    <string name="pause_recording">Pause</string>
    <string name="stop_recording">Finish</string>
    <string name="label_text">Texto</string>
    <string name="title_view_note">Detalle de la Nota</string>
    <string name="btn_export">Exportar</string>
    <string name="btn_transcribe">Transcribir</string>
    <string name="loading_note">Cargando nota...</string>
    <string name="delete_dialog_title">Confirmar borrado</string>
    <string name="delete_dialog_message">¿Estás seguro de que quieres borrar esta nota? Esta acción no se puede deshacer.</string>
    <string name="delete_dialog_positive">Borrar</string>
    <string name="delete_dialog_negative">Cancelar</string>
    <string name="export_audio_title">Exportar Audio (.mp3)</string>
    <string name="export_text_title">Exportar Texto (.txt)</string>
    <string name="cd_transcribe_audio">Transcripcion</string>
    <string name="cd_play_audio">Reproducir audio</string>
    <string name="cd_pause_audio">Pausar audio</string>
    <string name="cd_stop_audio">Detener audio</string>
</resources>