<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ViewNoteActivity">

    <!-- 1. Barra superior con título e icono de regreso -->
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar_view_note"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:title="@string/title_view_note" />

    </com.google.android.material.appbar.AppBarLayout>

    <!-- Usamos ScrollView para que el contenido sea desplazable si no cabe en pantalla -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Fecha (automática) -->
            <TextView
                android:id="@+id/dateTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="20dp"
                android:textStyle="bold"
                tools:text="17 de octubre de 2025" />

            <!-- Cuadro de texto para el título -->
            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="?attr/colorOnSurface"
                tools:text="Título de la Nota de Voz" />

            <TextView
                android:id="@+id/audioFilePathTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textAlignment="center"
                android:textSize="12sp"
                android:visibility="gone"
                tools:text="/path/to/audio.mp3"
                tools:visibility="visible"/>

            <!-- Contenedor para los botones de grabación -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="24dp">

                <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">

                <ImageButton
                    android:id="@+id/playButton"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:src="@drawable/ic_play_arrow"
                    android:contentDescription="@string/cd_record" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/play_audio"
                    android:textAppearance="?attr/textAppearanceCaption" />
            </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageButton
                        android:id="@+id/pauseButton"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:src="@drawable/ic_pause"
                        android:visibility="gone"
                        tools:visibility="visible"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/pause_recording"
                        android:textAppearance="?attr/textAppearanceCaption" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageButton
                        android:id="@+id/stopButton"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:src="@drawable/ic_stop"
                        android:visibility="gone"
                        tools:visibility="visible"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/stop_recording"
                        android:textAppearance="?attr/textAppearanceCaption" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageButton
                        android:id="@+id/transcriptionButton"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:src="@drawable/ic_transcription"
                        android:visibility="gone"
                        tools:visibility="visible"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/label_text"
                        android:textAppearance="?attr/textAppearanceCaption" />
                </LinearLayout>

            </LinearLayout>

            <!-- Botones de acción principales (Guardar y Borrar) -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="32dp">

                <Button
                    android:id="@+id/deleteButton"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginEnd="8dp"
                    android:text="@string/btn_delete"/>

                <Button
                    android:id="@+id/exportButton"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginEnd="8dp"
                    android:text="@string/btn_export"/>

                <Button
                    android:id="@+id/saveButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btn_save"/>
            </LinearLayout>

            <!-- TextView para mostrar el estado o la ruta del archivo de texto-->
            <TextView
                android:id="@+id/transcriptPathTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textAlignment="center"
                android:textSize="12sp"
                android:visibility="gone"
                tools:text="/path/to/2025-10-17_10-41_voicestorm.txt"
                tools:visibility="visible"/>

            <!-- Cuadro de texto para la transcripción -->
            <TextView
                android:id="@+id/transcriptTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/border_background"
                android:padding="12dp"
                android:minHeight="100dp"
                android:text="@string/transcript_placeholder"
                android:gravity="top"/>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
